<?xml version="1.0"?>
<package format="2">
  <name>service_tutorials</name>
  <version>0.0.0</version>
  <description>The service_tutorials package</description>

  
  <maintainer email="jdrjk0000@todo.todo">jdrjk0000</maintainer>


  <license>TODO</license>



 
 
 
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
